# Computational-Mathematics

./: .gitignore  CMakeLists.txt
lab1/: main.cpp
lab4/: ChooseApproximationFunction.h  LinearApproximation.h  QuadraticApproximation.h  Realisation.cpp  t.txt
lab5/: LagrangePolynomial.h  NewtonPolynomialDD.h  NewtonPolynomialDividedDifference.h  NewtonPolynomialFD.h  NewtonPolynomialFiniteDifference.h  Realisation.cpp  SolvingMethods.h
lab6/: Realisation.cpp
